# sysdiagnose

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  commands.md  introduction.md  pyproject.toml
.github/workflows/: pycodestyle.yml
sysdiagnose/: __main__.py  analize.py  analyze.py  clear.py  config.py  init.py  list.py  parse.py
sysdiagnose/analysers/: apps.py  demo.py  timeliner.py  wifi_gelocation.py  wifi_gelocation_kml.py
sysdiagnose/analyzers/: README.md  __init__.py  apps.py  demo.py  timeliner.py  wifi_gelocation_kml.py
sysdiagnose/analyzers/old/: apps.py  wifi_gelocation.py
sysdiagnose/commands/: README.md  __init__.py  analyze.py  clear.py  init.py  list.py  parse.py
sysdiagnose/parsers/: README.md  __init__.py  accessibility_tcc.py  appinstallation.py  brctl.py  demo.py  demo_parser.py  itunesstore.py  logarchive.py  mobileinstallation.py  powerlogs.py  ps.py  psthread.py  shutdownlogs.py  spindumpnosymbols.py  swcutil.py  sys.py  taskinfo.py  uuid2path.py  wifi_known_networks.py  wifiscan.py  wifisecurity.py
sysdiagnose/parsers/old/: appinstallation.py  containermanager.py  demo_parser.py  itunesstore.py  mobileactivation.py  net_ext_cache.py  networkextension.py  networkextensioncache.py  olddsc.py  powerlogs.py  ps.py  psthread.py  shutdownlogs.py  taskinfo.py  wifinetworks.py
sysdiagnose/utils/: __init__.py  info.py  logging.py  misc.py  paths.py  sqlite.py  sqlite2json.py  times.py  uuid2misp.py  version.py  yaml.py
